--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,26 @@
+certifi==2019.9.11
+chardet==3.0.4
 Django==2.2.7
-django-bootstrap-form
-django-debug-toolbar
-django-forms-bootstrap
-django-tables2
-django-taggit
-django-test-plus
-django-user-accounts
-flake8
--e git+https://github.com/tdxdave/H5PP.git@97283590299048b4de3a847c1b4eaa43df6f369e#egg=H5PP-master
-Pillow
-pinax-theme-bootstrap
-psycopg2
-
+django-appconf==1.0.3
+django-bootstrap-form==3.4
+django-debug-toolbar==2.1
+django-forms-bootstrap==3.1.0
+django-tables2==2.2.0
+django-taggit==1.1.0
+django-test-plus==1.3.1
+django-user-accounts==2.1.0
+entrypoints==0.3
+flake8==3.7.9
+-e git+https://github.com/tdxdave/H5PP.git@97283590299048b4de3a847c1b4eaa43df6f369e#egg=H5PP
+idna==2.8
+mccabe==0.6.1
+Pillow==6.2.1
+pinax-theme-bootstrap==8.0.1
+psycopg2==2.8.4
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pytz==2019.3
+requests==2.22.0
+six==1.13.0
+sqlparse==0.3.0
+urllib3==1.25.7
